  (dev->tbusy).

* RatedSource::run_scheduled() now places a dummy timer for 0 ms if it 
  has other things to do. In userlevel, this is needed because RatedSource
  doesn't listen on a descriptor, so Router::wait() must be notified, somehow,
  that RatedSource still needs to run. I find scheduling a dummy timer is the
  best option right now.

* Added select_fd() and selected() to ToBPF

* conf/make-udpgen.pl: a perl script that generates udpgen configuration
* conf/make-udpcount.pl: a perl script that generates udpcount configuration


Version 1.0.4   13.Apr.2000

* Changed how FromDevice, ToDevice, and PollDevice interact with each
  other. Before, if you specify just PollDevice w/o ToDevice, the tx queue
  does not get cleaned because in polling mode tx queue cleaning must be
  scheduled explicitly. Now, PollDevice looks for a ToDevice on the same
  device. If no such element exists, it remembers to clean the tx queue
  itself. Also ToDevice looks for a PollDevice to decide if it should use
  polling extensions. Some of this code was in the 1.0.3 release, but there
  was a bug.

* New linux kernel patch (etc/linux-2.2.14-patch): locks are added to protect
  recycling of sk_buff objects and device polling functions - not extensively
  tested.

* New elements: UDPEncap (put an UDP header on a packet), RatedSource (like
  infinite source, but send packets at a given rate).

* udpgen click configuration (conf/udpgen.click): This is better than
  udpgen.o in that you can utilize device driver polling extensions. Also,
  on some machines we observe a delay (on order of ms) between when
  transmission complete and tx interrupt. This causes the transmission
  queue to not get cleaned fast enough for udpgen to send its packets.
  Using click, we control when the tx queue is cleaned.


Version 1.0.3   9.Apr.2000

* Added `--with-linux[=DIR]' option to `./configure'. Suggested by Richard
  Mortier <Richard.Mortier@cl.cam.ac.uk>.
