@@ -27,6 +27,18 @@ ErrorElement::clone() const
   return new ErrorElement;
 }
 
+void
+ErrorElement::notify_ninputs(int i)
+{
+  set_ninputs(i);
+}
+
+void
+ErrorElement::notify_noutputs(int i)
+{
+  set_noutputs(i);
+}
+
 int
 ErrorElement::configure(const String &, ErrorHandler *)
 {
