@@ -19,10 +19,15 @@ Version 1.0.5
   that RatedSource still needs to run. I find scheduling a dummy timer is the
   best option right now.
 
-* Added select_fd() and selected() to ToBPF
+* click-fastclassifier can combine adjacent Classifiers.
+
+* Added select_fd() and selected() to ToBPF.
 
 * conf/make-udpgen.pl: a perl script that generates udpgen configuration
+
 * conf/make-udpcount.pl: a perl script that generates udpcount configuration
+
+* Removed UnlimitedElement in favor of `notify_n{in,out}puts()'.
 
 
 Version 1.0.4   13.Apr.2000
